多管道设计：configmap表去外键，同时修改configmap控制器的读写方法
